--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -4,7 +4,7 @@
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <meta name="description" content="Web-based Portfolio" />
       <meta name="keywords" content="Portfolio" />
-      <link rel="stylesheet" type="text/css" href="css/style.css" />
+      <link rel="stylesheet" type="text/css" href="style.css" />
       <!--Added font "Lato" from Google Fonts-->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
                <li><a href="artifacts.html">Artifacts</a></li>
                <li><a href="modules.html">Module Assignments</a></li>
                <li><a href="contact.html">Contact Me</a></li>
-               <li><a href="creative.html">Creative Page</a></li>
+               <li><a href="creative.html">Civ 6</a></li>
                <li><a href="validated.html">Validated</a></li>
             </ul>
          </div>
@@ -37,27 +37,27 @@
             <h2>Validated</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eveniet neque consequatur provident? Quia distinctio, repudiandae maiores suscipit laudantium impedit dicta reprehenderit earum hic aspernatur nemo, consequatur, commodi optio nisi?</p>
             <div class="row">
-               <div class="column">
+               <div class="column-1">
                   <h3>HTML</h3>
                   <p>HTML Validation index.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_index.png" alt="HTML Validation index.html" title="HTML Validation index.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_index.png" alt="HTML Validation index.html" title="HTML Validation index.html" >
                   <p>HTML Validation about.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_about.png" alt="HTML Validation about.html" title="HTML Validation about.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_about.png" alt="HTML Validation about.html" title="HTML Validation about.html" >
                   <p>HTML Validation courses.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_courses.png" alt="HTML Validation courses.html" title="HTML Validation courses.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_courses.png" alt="HTML Validation courses.html" title="HTML Validation courses.html" >
                   <p>HTML Validation artifacts.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_artifacts.png" alt="HTML Validation artifacts.html" title="HTML Validation artifacts.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_artifacts.png" alt="HTML Validation artifacts.html" title="HTML Validation artifacts.html" >
                   <p>HTML Validation modules.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_modules.png" alt="HTML Validation modules.html" title="HTML Validation modules.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_modules.png" alt="HTML Validation modules.html" title="HTML Validation modules.html" >
                   <p>HTML Validation thankyou.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_thankyou.png" alt="HTML Validation thankyou.html" title="HTML Validation thankyou.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_thankyou.png" alt="HTML Validation thankyou.html" title="HTML Validation thankyou.html" >
                   <p>HTML Validation creative.html</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_creative.png" alt="HTML Validation creative.html" title="HTML Validation creative.html" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_creative.png" alt="HTML Validation creative.html" title="HTML Validation creative.html" >
                </div>
-               <div class="column">
+               <div class="column-2">
                   <h3>CSS</h3>
                   <p>CSS Validation</p>
-                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/4d84e6b8cb89b8d43524dbf6c3156ae98c7abc02/midterm/images/CSSValidation.png" alt="CSS Validation" title="CSS Validation" width="500" height="200">
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/4d84e6b8cb89b8d43524dbf6c3156ae98c7abc02/midterm/images/CSSValidation.png" alt="CSS Validation" title="CSS Validation" >
                </div>
             </div>
          </div>
@@ -87,4 +87,4 @@
          <div class="clear"> </div>
       </div>
    </body>
-</html>
+</html>  
