--- a/m05/index.html
+++ b/m05/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>M05 - Bullseye</title>
-    <link rel="stylesheet" type="text/css" href="c04.css" />
+    <link rel="stylesheet" type="text/css" href="css/c04.css" />
     <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Wellfleet" type="text/css">
   </head>
   <body>
