--- a/m05/index.html
+++ b/m05/index.html
@@ -13,6 +13,6 @@
       <img src="https://javascriptbook.com/code/c04/images/teacher.png" id="teacher2" alt="" />
       <section id="blackboard"></section>
     </section>
-    <script src="example.js"></script>
+    <script src="js/example.js"></script>
   </body>
 </html>
