--- a/a4/index.html
+++ b/a4/index.html
@@ -369,7 +369,7 @@
             </p>
             <div class="warning" id="submitError"></div>
         </form>
-        <script src="js/validator.js" type="text/javascript"></script>
+        <script src="js/validator.js"></script>
     </body>
 </html>
 
