--- a/a4/index.html
+++ b/a4/index.html
@@ -373,9 +373,9 @@
         <footer>
         <p>Author: James Kim</p>
         <p>
-            <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa4%2Findex.html&usermedium=all&vextwarning=&warning=1">
+            <a href="https://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa4%2Findex.html&usermedium=all&vextwarning=&warning=1">
                 <img style="border:0;width:88px;height:31px"
-                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
                     alt="Valid CSS!" />
                 </a>
             </p>
