--- a/a4/index.html
+++ b/a4/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="description" content="Artifact 04 - Contact Us">
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="art4.css" />
+        <link rel="stylesheet" type="text/css" href="css/art4.css" />
         <title>Artifact 04</title>
     </head>
     <body>
@@ -369,7 +369,7 @@
             </p>
             <div class="warning" id="submitError"></div>
         </form>
-        <script src="validator.js"></script>
+        <script src="js/validator.js"></script>
     <footer>
         <p>Author: James Kim</p>
         <p>
