--- a/a4/index.html
+++ b/a4/index.html
@@ -374,7 +374,17 @@
         <p>Author: James Kim</p>
         <p>
             <a href="https://valeriav-8.github.io/dev109/a4/validation.html" target="_blank">Validation</a>
-            </p>
+        </p>
+        <div>
+            <h2>CSS Validation</h2>
+            <img id="validationCSS" src="images/Mod8_CSSValidation.png" alt="CSS Validation">
+        </div>
+        <div>
+            <h2>
+                HTML Validation
+            </h2>
+            <img id="validationHTML" src="images/Mod8_HTMLValidation.png" alt="HTML Validation">
+        </div>
     </footer>
     </body>
 </html>
