--- a/a5/index.html
+++ b/a5/index.html
@@ -27,7 +27,7 @@
     <script src="script/slideshow.js"></script>
    <footer>
     <p>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa5%2Findex.html&usermedium=all&vextwarning=&warning=1">
             <img style="border:0;width:88px;height:31px"
                 src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
                 alt="Valid CSS!" />
