--- a/a5/index.html
+++ b/a5/index.html
@@ -10,6 +10,9 @@
    <body>
     <div class="slideshow">
         <div class="images">
+            <div>
+                <p id="timer"></p>
+            </div>
             <img class="show" src="img/new_year.jpeg" alt="New Years">
             <img class="show" src="img/fall.jpeg" alt="Fall">
             <img class="show" src="img/summer.jpeg" alt="Summer">
@@ -27,12 +30,12 @@
     <script src="script/slideshow.js"></script>
    <footer>
     <p>
-        <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa5%2Findex.html&usermedium=all&vextwarning=&warning=1">
+        <a href="https://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa5%2Findex.html&usermedium=all&vextwarning=&warning=1">
             <img style="border:0;width:88px;height:31px"
-                src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                src="https://jigsaw.w3.org/css-validator/images/vcss"
                 alt="Valid CSS!" />
-            </a>
-        </p>
+        </a>
+    </p>
    </footer>
   </body>
 </html>
