--- a/finalp1/contact.html
+++ b/finalp1/contact.html
@@ -37,14 +37,18 @@
             <h2>Contact Me</h2>
             <!--Form to recieve and store name, email, and comments-->
             <!--After submitting, redirects user to Thank You Page-->
-            <form action="thankyou.html" method="get" name="myContact">
+            <form id="myform" action="thankyou.html" method="get" name="myContact" onsubmit="isValid();">
                <label for="name">Name:</label>
-               <input type="text" id="name" name="name"><br><br>
+               <input type="text" id="name" name="name">
+               <div class="warning" id="uname"></div><br><br>
                <label for="email">Email:</label>
-               <input type="text" id="email" name="email"><br><br>
+               <input type="text" id="email" name="email">
+               <div class="warning" id="uemail"></div><br><br>
                <label for="comment">Comment:</label>
-               <input type="text" id="comment" name="comment"><br><br>
-               <input type="submit" value="Submit">
+               <input type="text" id="comment" name="comment">
+               <div class="warning" id="ucomment"></div><br><br>
+               <input type="submit" id="submit" name="submit" value="Submit">
+               <div class="warning" id="submitError"></div>
             </form>
          </div>
          <div class="clear"> </div>
@@ -72,5 +76,6 @@
          </div>
          <div class="clear"> </div>
       </div>
+      <script src="scripts/validation.js"></script>
    </body>
 </html>
