--- a/finalp1/index.html
+++ b/finalp1/index.html
@@ -4,7 +4,7 @@
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <meta name="description" content="Web-based Portfolio" />
       <meta name="keywords" content="Portfolio" />
-      <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel="stylesheet" type="text/css" href="css/style.css" />
       <!--Added font "Lato" from Google Fonts-->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,13 +34,22 @@
          </div>
          <div id="content">
             <!--Welcome/Home Page-->
-            <h2>Welcome</h2>
+            <audio controls src="/music/bella-ciao-italian-partisan-folk-song-from-the-late-19th-century-3052.mp3" type="audio.mpeg">
+            Your browser does not support the audio element.
+            </audio>
+            <h2>Welcome to my page!</h2>
             <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere laborum impedit expedita amet incidunt, excepturi officiis alias illo! Tenetur fugiat ea minima sapiente adipisci praesentium quis? Laboriosam pariatur suscipit non.
+               This is a web-based portfolio containing information about myself and assignments I have completed for my DEV 109 course at Bellevue College.
+               This was made over the Winter 2025 course and it is a compilation of things I had to do in my class.
+            </p>
+            <p>
+               You will find a little about me, module assignments and artifacts, which are just assignments, the courses I have taken for Winter 2025, (fake) contact me page,
+               a game that I have been playing, and pictures of all my pages that show that they are validated. 
             </p>
             <p>
                 <!--Link to original template-->
-                <a href="http://www.simpletemplates.org/simple-website-template-1.html" target="_blank">Original Template</a>
+                <a href="https://www.simpletemplates.org/simple-website-template-1.html" target="_blank">Original Template</a>
+                <p>This is the original template that I have tweaked.</p>
             </p>
          </div>
          <div class="clear"> </div>
@@ -51,12 +60,12 @@
             Copyright &copy; Year by <a href="#">Your Website</a>
             <!-- W3C Markup Validator -->
             <p>
-               <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
+               <a href="https://validator.w3.org/check?uri=referer"><img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
                   height="31" width="88" /></a>&nbsp;
                <!-- W3C CSS Validator -->
-               <a href="http://jigsaw.w3.org/css-validator/check/referer">
+               <a href="https://jigsaw.w3.org/css-validator/check/referer">
                <img style="border:0;width:88px;height:31px"
-                  src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                  src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
                   alt="Valid CSS!" />
                </a>
             </p>
@@ -64,7 +73,7 @@
          <div class="right">
             <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
                -->
-            Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
+            Design by <a href="https://www.simpletemplates.org">Simple Website Templates</a>
          </div>
          <div class="clear"> </div>
       </div>
