--- a/finalp1/contact.html
+++ b/finalp1/contact.html
@@ -59,7 +59,7 @@
             Copyright &copy; Year by <a href="#">Your Website</a>
             <!-- W3C Markup Validator -->
             <p>
-               <a href="https://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
+               <a href="https://validator.w3.org/check?uri=referer"><img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
                   height="31" width="88" /></a>&nbsp;
                <!-- W3C CSS Validator -->
                <a href="https://jigsaw.w3.org/css-validator/check/referer">
