--- a/a5/index.html
+++ b/a5/index.html
@@ -24,6 +24,7 @@
           </div>
         <div class="btns">
             <button id="nextBtn" onclick="nextImage()">&#10094;</button>
+            <button id="stopAdvance" onclick="stopAdvance()">Stop</button>
             <button id="prevBtn" onclick="prevImage()">&#10095;</button>
         </div>
     </div>
